NEW Added empty search mapper and repository

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -6,6 +6,8 @@ parameters:
     ns_cms.form.type.template_path.class:     NS\CmsBundle\Form\Type\TemplatePathType
     ns_cms.manager.template.class:            NS\CmsBundle\Manager\TemplateManager
     ns_cms.manager.block.class:               NS\CmsBundle\Manager\BlockManager
+    ns_cms.search.mapper.content.class:       NS\CmsBundle\Search\ContentMapper
+    ns_cms.search.repository.content.class:   NS\CmsBundle\Search\ContentRepository
 
 services:
     ns_cms.repository.template:
@@ -42,3 +44,15 @@ services:
         calls:
             - [setBlockRepository, [@ns_cms.repository.block]]
             - [setBlockTypeRepository, [@ns_cms.repository.blocktype]]
+
+    ns_cms.search.agent.content:
+        class: %ns_search.agent.class%
+        arguments: [@ns_cms.search.mapper.content, @ns_cms.search.repository.content]
+        tags:
+            - { name: ns_search.agent }
+
+    ns_cms.search.mapper.content:
+        class: %ns_cms.search.mapper.content.class%
+
+    ns_cms.search.repository.content:
+        class: %ns_cms.search.repository.content.class%
