--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,9 +8,10 @@ parameters:
     ns_cms.manager.block.class:               NS\CmsBundle\Manager\BlockManager
 
     # search agent classes
+    ns_cms.search.content.type:               'ns_cms:content'
     ns_cms.search.content.model.class:        'NSCmsBundle:Block'
-    ns_cms.search.content.mapper.class:       NS\CmsBundle\Search\ContentMapper
-    ns_cms.search.content.repository.class:   NS\CmsBundle\Search\ContentRepository
+    ns_cms.search.content.mapper.class:       'NS\CmsBundle\Search\ContentMapper'
+    ns_cms.search.content.repository.class:   'NS\CmsBundle\Search\ContentRepository'
 
 services:
     ns_cms.repository.template:
@@ -52,6 +53,7 @@ services:
     ns_cms.search.content.agent:
         class: %ns_search.agent.class%
         arguments:
+            - %ns_cms.search.content.type%
             - %ns_cms.search.content.model.class%
             - @ns_cms.search.content.mapper
             - @ns_cms.search.content.repository
