NEW Added direct page routing

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -3,8 +3,12 @@ ns_cms_page:
     defaults: { _controller: NSCmsBundle:Pages:page }
     requirements: { id: \d+ }
 
-ns_cms_page_name:
+ns_cms_page_name_long:
     pattern:  '/page/{name}'
+    defaults: { _controller: NSCmsBundle:Pages:pageName }
+
+ns_cms_page_name:
+    pattern:  '/{name}'
     defaults: { _controller: NSCmsBundle:Pages:pageName }
 
 ns_cms_main:
