--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
 	],
 	"minimum-stability": "dev",
 	"require": {
-		"php": ">=5.3.2",
-		"symfony/framework-bundle": ">=2.1,<2.3-dev"
+		"php": ">=5.3.2"
 	},
 	"autoload": {
 		"psr-0": { "NS\\CmsBundle": "" }
