NEW Added id and type name setters

--- a/Resources/config/ns_cms.blocks.yml
+++ b/Resources/config/ns_cms.blocks.yml
@@ -14,3 +14,5 @@ blocks:
         template: NSCmsBundle:Blocks:menuBlock.phtml.twig
         settingsFormClass: NS\CmsBundle\Block\Settings\MenuBlockSettingsForm
         settingsModelClass: NS\CmsBundle\Block\Settings\MenuBlockSettingsModel
+        cache:
+            entities: [NS\CmsBundle\Entity\Page]
