--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,13 +1,14 @@
 parameters:
     ns_cms.form.element.page_select_type.class: 'NS\CmsBundle\Form\Element\PageSelectType'
     ns_cms.form.type.template_path.class:       'NS\CmsBundle\Form\Type\TemplatePathType'
-    ns_cms.repository.template.class:           'NS\CmsBundle\Entity\TemplateRepository'
     ns_cms.repository.blocktype.class:          'NS\CmsBundle\Entity\BlockTypeRepository'
     ns_cms.repository.block.class:              'NS\CmsBundle\Entity\BlockRepository'
     ns_cms.repository.block.factory_argument:   'NSCmsBundle:Block'
     ns_cms.repository.page.class:               'NS\CmsBundle\Entity\PageRepository'
     ns_cms.repository.page.factory_argument:    'NSCmsBundle:Page'
+    ns_cms.repository.template.class:           'NS\CmsBundle\Entity\TemplateRepository'
     ns_cms.service.page.class:                  'NS\CmsBundle\Service\PageService'
+    ns_cms.service.template.class:              'NS\CmsBundle\Service\TemplateService'
     ns_cms.manager.template.class:              'NS\CmsBundle\Manager\TemplateManager'
     ns_cms.manager.block.class:                 'NS\CmsBundle\Manager\BlockManager'
     ns_cms.twig.extension.area.class:           'NS\CmsBundle\Twig\Extension\AreaExtension'
@@ -33,11 +34,6 @@ services:
         tags:
             -  { name: form.type, alias: ns_cmsbundle_templatepathtype }
 
-    ns_cms.repository.template:
-        class: %ns_cms.repository.template.class%
-        calls:
-            - [setContainer, [@service_container]]
-
     ns_cms.repository.blocktype:
         class: %ns_cms.repository.blocktype.class%
         arguments: [@ns_admin.service]
@@ -61,6 +57,16 @@ services:
         calls:
             - [setEntityManager, [@doctrine.orm.entity_manager]]
             - [setPageRepository, [@ns_cms.repository.page]]
+
+    ns_cms.repository.template:
+        class: %ns_cms.repository.template.class%
+        calls:
+            - [setContainer, [@service_container]]
+
+    ns_cms.service.template:
+        class: %ns_cms.service.template.class%
+        calls:
+            - [setTemplateRepository, [@ns_cms.repository.template]]
 
     ns_cms.manager.template:
         class: %ns_cms.manager.template.class%
