UPDATE Minor menu rename

--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -1,6 +1,7 @@
 -
-    label:  "Контент"
+    label:  "Страницы"
     action: "content:index"
+    position: "first"
     pages:
         -
             label:  Общие
