NEW Added icon to admin menu

--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -2,6 +2,7 @@
     label:  "Страницы"
     action: "content:index"
     position: "first"
+    icon: "icon-file"
     pages:
         -
             label:  Общие
