--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -1,7 +1,7 @@
 -
     label:  "Страницы"
     action: "content:index"
-    position: "first"
+    position: "beginning"
     icon: "icon-file"
     pages:
         -
